<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:title="@string/menu1">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu1_sub1"
                    android:title="@string/menu1_sub1"/>
                <item
                    android:id="@+id/menu1_sub2"
                    android:title="@string/menu1_sub2"/>
                <item
                    android:id="@+id/menu1_sub3"
                    android:title="@string/menu1_sub3"/>
                <item
                    android:id="@+id/menu1_sub4"
                    android:title="@string/menu1_sub4"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu2"
        android:title="@string/menu2"/>
    <item
        android:id="@+id/menu3"
        android:title="@string/menu3"/>
    <item
        android:id="@+id/menu4"
        android:title="@string/menu4"/>
    <item
        android:id="@+id/menu5"
        android:title="@string/menu5"/>
    <item
        android:id="@+id/clear"
        android:title="@string/clear_screen"/>
    <item android:title="@string/menu_author"/>

</menu>